k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx  # ← Важно!
  rules:
  - http:
      paths:
      - path: /?(.*)
        # pathType: Prefix
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        # pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4444
